# APA

./: .gitignore  README.md  compare.py  ifbench_eval.py  pyproject.toml  run_demo.py
adaptive_prompt_automaton/: __main__.py
adaptive_prompt_automaton/core/: automaton.py  executor.py  features.py
adaptive_prompt_automaton/eval/: benchmarks.py  ifbench.py  ifbench_official.py
adaptive_prompt_automaton/search/: evolution.py  gepa.py  gepa_dspy.py  mipro.py  mipro_dspy.py
adaptive_prompt_automaton/utils/: api.py
src/apa/: __init__.py  cli.py  constants.py  orchestrator.py  reporting.py  types.py
src/apa/benchmarks/: __init__.py  aime.py  base.py  hotpotqa.py  hover.py  ifbench.py  livebench_math.py  pupa.py  registry.py
src/apa/benchmarks/ifbench_utils/: __init__.py  instructions.py
src/apa/benchmarks/livebench_math_utils/: __init__.py  metric.py
src/apa/benchmarks/livebench_math_utils/AMPS_Hard/: __init__.py
src/apa/benchmarks/livebench_math_utils/math_competitions/: __init__.py
src/apa/benchmarks/livebench_math_utils/olympiad/: __init__.py
src/apa/core/: __init__.py  automaton.py  executor.py  mutation.py  optimizer.py
src/apa/methods/: __init__.py  apa_runner.py  base.py  gepa_runner.py  mipro_runner.py  registry.py
src/apa/retrieval/: __init__.py  base.py  bm25_wiki.py  fallback.py
src/apa/utils/: __init__.py  cache.py  cost.py  dspy_helpers.py  jsonl.py  seed.py
tests/: test_apa_optimizer.py  test_automaton_core.py  test_benchmark_split_contracts.py  test_benchmarks.py  test_executor.py  test_features.py  test_methods_dry_run.py  test_orchestrator_dry_run.py  test_reporting.py  test_transitions.py
